<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/lists_settings">

        <EditTextPreference
            app:key="lists_string"
            app:title="@string/lists_string"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:title="@string/lists_description" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance_settings">

        <SwitchPreferenceCompat
            app:key="show_msg_id"
            app:title="@string/show_msg_id" />

        <SwitchPreferenceCompat
            app:key="show_abs_date"
            app:title="@string/show_abs_date" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/behaviour_settings">

        <SwitchPreferenceCompat
            app:key="auto_confirm"
            app:title="@string/auto_confirm" />

    </PreferenceCategory>

</PreferenceScreen>